--- a/aiwaifu/requirements.txt
+++ b/aiwaifu/requirements.txt
@@ -1,69 +1,15 @@
-accelerate
-aiohappyeyeballs
-aiohttp
-aiosignal
-AnilistPython
-annotated-types
-attrs
-certifi
-cffi
-characterai
-charset-normalizer
-colorama
-curl_cffi
-datasets
-diffusers
-dill
-frozenlist
-fsspec
-gevent
-huggingface-hub
-idna
-importlib_metadata
-iniconfig
-Jinja2
-MarkupSafe
-mkl-service
-mkl_fft
-mkl_random
-mpmath
-multidict
-multiprocess
-networkx
-numpy
-packaging
-pandas
-peft
-pillow
-pluggy
-psutil
-pyarrow
-pycparser
-pydantic
-pydantic_core
-PySocks
-pytest
-python-dateutil
-python-dotenv
-pytz
-PyYAML
-regex
-requests
-safetensors
-six
-sympy
-tokenizers
-torch
-torchaudio
-torchvision
-tqdm
-transformers
-typing_extensions
-tzdata
-urllib3
-websockets
-xxhash
-yarl
-zipp
-zope.event
-zope.interface
+accelerate==0.34.2
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+AnilistPython==0.1.3
+characterai==1.0.1
+datasets==3.0.0
+diffusers==0.30.2
+huggingface-hub==0.24.7
+pillow==10.1.0
+requests==2.30.0
+tokenizers==0.19.1
+torch==2.4.1
+transformers==4.44.2
+websockets==13.0.1
